# scapy-red

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/: check_spdx.sh
.github/workflows/: unittests.yml
scapyred/: __init__.py  dominfo.py  ldaphero.py  listips.py  smbclient.py  smbscan.py
scapyred/completions/: README.md  template_complete.bash  template_script.bash
